[package]
name = "ghactions"
version = "0.8.0"
description = "GitHub Actions Crate"
keywords = ["github", "actions"]

homepage = "https://github.com/GeekMasher/ghactions"
repository = "https://github.com/GeekMasher/ghactions"
documentation = "https://docs.rs/ghactions/latest/ghactions/index.html"
authors = ["GeekMasher"]
license = "MIT"

edition = "2021"
rust-version = "1.70"

readme = "README.md"

[features]
default = ["log", "octocrab"]
log = ["dep:log", "dep:env_logger"]
octocrab = ["dep:octocrab"]

[dependencies]
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

octocrab = { version = "0.38", optional = true }

time = "0.3.36"

[dev-dependencies]
anyhow = "1"
log = "0.4"
tokio = { version = "1.37", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }

[[example]]
name = "basic"
path = "./examples/basic/src/main.rs"
features = ["octocrab"]

