[workspace]
resolver = "2"
members = [".", "ghactions-core", "ghactions-derive"]

[workspace.package]
version = "0.9.6"
license = "MIT"
description = "GitHub Actions Crate"
keywords = ["github", "actions"]
categories = ["development-tools"]

homepage = "https://github.com/42ByteLabs/ghactions"
repository = "https://github.com/42ByteLabs/ghactions"
documentation = "https://docs.rs/ghactions/latest/ghactions/index.html"
authors = ["GeekMasher"]

edition = "2021"
rust-version = "1.70"

readme = "README.md"

[package]
name = "ghactions"
readme = "README.md"
description = "GitHub Actions Crate"

version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
keywords.workspace = true
authors.workspace = true

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[features]
default = ["log", "macros", "octocrab"]
generate = ["ghactions-derive/generate"]
# Logging
log = ["ghactions-derive/log", "ghactions-core/log", "dep:log"]
dotenvy = ["ghactions-derive/dotenvy"]
# Macros
macros = ["ghactions-core/macros"]
# Octocrab
octocrab = ["ghactions-core/octocrab"]

[dependencies]
ghactions-core = { version = "^0.9", path = "ghactions-core" }
ghactions-derive = { version = "^0.9", path = "ghactions-derive" }

log = { version = "0.4", optional = true }

[dev-dependencies]
anyhow = "1"
log = "0.4"
dotenvy = "0.15"
tokio = { version = "1.38", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }

[[example]]
name = "basic"
path = "./examples/basic/src/main.rs"
required-features = ["dotenvy"]

[[example]]
name = "advanced"
path = "./examples/advanced/src/main.rs"
required-features = ["dotenvy", "generate"]
