[package]
name = "ghactions-core"
version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[features]
default = ["log", "macros", "octocrab"]
log = ["dep:log", "dep:env_logger"]
macros = []
octocrab = ["dep:octocrab", "dep:http"]
# Actions Caching
cache = ["dep:regex", "dep:glob", "dep:tar"]

[dependencies]
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
# Logging
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
# IndexMap
indexmap = { version = "^2.2", features = ["serde"] }
# GitHub API
octocrab = { version = "^0.38", optional = true }
http = { version = "^1", optional = true }
time = "0.3.36"

regex = { version = "^1.10", optional = true }
glob = { version = "^0.3", optional = true }
tar = { version = "^0.4", optional = true }

[dev-dependencies]
ghactions = { path = "../" }

