[package]
name = "ghactions-core"
version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[features]
default = ["log", "macros"]
log = ["dep:log", "dep:env_logger"]
macros = []
octocrab = ["dep:octocrab", "dep:http", "dep:tokio"]

# Toolcache features
toolcache = ["dep:ghactions-toolcache"]
toolcache-all = ["toolcache", "toolcache-tarball", "toolcache-zip"]
toolcache-tarball = ["toolcache", "ghactions-toolcache/tarball"]
toolcache-zip = ["toolcache", "ghactions-toolcache/zip"]

[dependencies]
ghactions-toolcache = { version = "^0.18", path = "../ghactions-toolcache", optional = true }

thiserror = "^2.0"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
glob = { version = "^0.3", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
url = { version = "^2.5", optional = true }
reqwest = { version = "^0.12", optional = true }

# Tarball
flate2 = { version = "^1.1", optional = true }
tar = { version = "^0.4", optional = true }
# Zip
zip = { version = "^5.0", optional = true }

# Logging
log = { version = "^0.4", optional = true }
env_logger = { version = "^0.11", optional = true }
# IndexMap
indexmap = { version = "^2.11", features = ["serde"] }
# GitHub API
octocrab = { version = "^0.45", optional = true }
http = { version = "^1.3", optional = true }
time = "^0.3"

[dev-dependencies]
ghactions = { path = "../" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }

