[package]
name = "ghactions-toolcache"
version.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[features]
default = []
all = ["tarball", "zip", "download"]

tarball = ["dep:flate2", "dep:tar"]
zip = ["dep:flate2", "dep:zip"]

download = ["api"]
api = ["dep:octocrab", "dep:http", "octocrab/rustls-ring"]

# Deprecated
log = []

[dependencies]
glob = "^0.3"
tokio = { version = "1.48", default-features = false, features = [
    "macros",
    "process",
    "fs",
] }
url = "^2.5"
reqwest = { version = "^0.13", default-features = false, features = [
    "charset",
    "http2",
    "rustls-no-provider",
    "system-proxy",
] }
thiserror = "^2.0"
log = "^0.4"

# Tarball
flate2 = { version = "^1.1", optional = true }
tar = { version = "^0.4", optional = true }
# Zip
zip = { version = "^8.6", optional = true }

# GitHub API
octocrab = { version = "^0.53", optional = true }
http = { version = "^1.4", optional = true }

[dev-dependencies]
anyhow = "1"
ghactions = { path = "../" }
