[package]
name = "basic"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghactions = { path = "../../", features = [ "dotenvy" ] }
anyhow = "1"
log = "0.4"
tokio = { version = "1.36.0", features = [ "full" ] } 
dotenvy = "0.15"

