[package]
name = "basic"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghactions = { path = "../../", features = ["octocrab"] }
anyhow = "1"
log = "0.4"
tokio = { version = "1.33.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
