[package]
name = "basic"
version = "0.9.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghactions = { version = "^0.9", path = "../../", features = [ "dotenvy" ] }
anyhow = "1"
log = "0.4"
tokio = { version = "^1.38", features = [ "full" ] } 
dotenvy = "0.15"

